# coclaw

./: AGENTS.md  README.md  README.zh-CN.md  eslint.config.js  package.json  pnpm-lock.yaml
.changeset/: device-identity-scope-fix.md  version-info.md
admin/: package.json
deploy/: .env.example  AGENTS.md  README.md  compose.dev.yaml  compose.yaml
docs/: README.md  versioning.md
docs/architecture/: bot-binding-and-auth.md  multi-agent-support.md  tauri-desktop-shell.md
docs/decisions/: adr-mobile-desktop-framework.md
docs/designs/: remote-log-channel.md  rtc-signaling-channel.md  slash-command-support.md  topic-management.md  webrtc-p2p-channel-phase2.md  webrtc-p2p-channel.md
docs/openclaw-reference/: channel-plugin-deep-analysis.md
docs/openclaw-research/: channel-plugin-deep-analysis.md  core-architecture.md  gateway-attachment-support.md  gateway-protocols.md  im-channel-interaction.md  integration-notes.md  openclaw-for-pm.md  runtime-and-operations.md  topic-feature-research.md
docs/operations/: wsl2-network-setup.md
help/: image-upload-not-working.md
plugins/: AGENTS.md
scripts/: build-server.sh  build-ui.sh  deploy-common.sh
server/: .env.example  CHANGELOG.md  Dockerfile  STATUS.md  package.json
tests/: dc-chunking-compat.test.js
ui/: CHANGELOG.md  Dockerfile  STATUS.md  capacitor.config.ts  components.d.ts  index.html  package.json  vite.config.js
ui/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.macos.conf.json
ui/src-tauri/capabilities/: main.json
ui/src-tauri/src/: lib.rs  tray.rs
(+211 files in other folders)
