[package]
name = "coclaw"
version = "1.0.0"
description = "CoClaw Desktop App"
authors = ["CoClaw"]
license = "Apache-2.0"
repository = "https://github.com/AYuaner/coclaw"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
